--- a/WebAppBackend/server/.env
+++ b/WebAppBackend/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://qajgvalencia:BUxIhYb4nDlfH4DV@cluster0.h07iggq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://kazukiDB:o7LmJC5czAxuyWxD@cluster0.nxog2hx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
